# MoJoAssistant

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CHINESE_ENCODING_FIX.md  Coding Agents Rules.md  Dockerfile  FILE_STRUCTURE_AFTER_RENAME.md  FUNCTIONALITY_COMPARISON.md  GEMINI.md  GorillaQuantized.py  INSTALL.md  INTEGRATION_REPORT.md  LICENSE  MODEL_DOWNLOADER_GUIDE.md  QUICKSTART.md  README.md  README_zh_TW.md  RELEASE_NOTES_BETA_1.0.md  RELEASE_NOTES_v1.1.0.md  SCHEDULER_DAEMON.md  SYSTEM_README.md  TODO.md  TOOL_BASED_CONFIGURATOR.md  app_factory.py  basic_gpt4all.py  claude_mcp_bridge.py  demo_model_selector.py  demo_tool_based_config.py  docker-compose.yml  download_model.py  embedding-config.json.example  funding.json  install.py  install_amd.sh  install_mojo.py  langchain_gpt4all.py  langchain_gpt4all_list.py  (+24 more)
.github/workflows/: docker-build.yml  docker-publish.yml  smoke-test.yml
app/: example.py  interactive-cli.py  setup_wizard.py
app/benchmarking/: gentle_runner.py
app/community/: discord_gateway.py
app/config/: __init__.py  app_config.py  config_loader.py  doctor.py  first_run.py  logging_config.py  mcp_config.py  paths.py
app/dashboard/: auth.py  openai_proxy.py  router.py
app/dreaming/: __init__.py  chunker.py  inbox_distillation.py  models.py  pipeline.py  session_compactor.py  setup.py  synthesizer.py
app/git/: __init__.py  git_service.py
app/installer/: __init__.py  bootstrap_llm.py  orchestrator.py
app/llm/: api_llm_interface.py  llm_base.py  llm_interface.py  llm_model.py  local_llm_interface.py  resource_pool_interface.py  unified_client.py
app/mcp/: API_DESIGN.md  README.md  __init__.py  client_example.py  mcp_service.py  server.py
app/memory/: active_memory.py  archival_memory.py  conflict_diagnosis.py  embedding_migration.py  embedding_pool.py  eval_consolidation.py  knowledge_manager.py  memory_action.py  memory_manager.py  memory_page.py  multi_model_storage.py  self_tunable.py  simplified_embeddings.py  working_memory.py
claude-docs/: CLAUDE_MCP_SUMMARY.md  CLAUDE_TESTING_GUIDE.md  FINAL_CLAUDE_SETUP.md  MCP_INTEGRATION_GUIDE.md  QUICKSTART.md  START_MCP_SERVICE.md
config/: agentic_prompts.json  agentic_tools.json  attention_routing.json  behavioral_patterns.json  capability_catalog.json  capability_defaults.json  claude_desktop_config.json  client_system_prompt.md  embedding_config.json.example  env_variables.json  google_calendar_scheduler_policy.json  known_runtimes.json  llm_config.json  llm_config.json.comprehensive  llm_config.json.example  mcp_api_description.json  mcp_servers.json  model_catalog.json  notifications_config.json.example  planning_prompts.json  policy_patterns.json  resource_pool.json  resource_pool.json.example  resource_pool_config.json  safety_policy.json  scheduler_config.json  scheduler_config.json.example  tmux-mcp.toml  tool_catalog.json
docker/: Dockerfile  Dockerfile.dev  Dockerfile.dev.rocm  Dockerfile.rocm  docker-compose.dev.yml  docker-compose.portainer.rocm.yml  docker-compose.portainer.yml  docker-compose.rocm.yml  docker-compose.yml
docs/: BETA_RELEASE_CHECKLIST.md  DEVELOPMENT_RULES_AI_FIRST_COMMUNITY.md  INSTALL.md  MCP_CLIENT_SETUP.md  MCP_PROMPT_ENDPOINTS.md  MEMLONG_BENCHMARK.md  MOJOASSISTANT_FULL_OVERVIEW.md  QUICKSTART.md  SCHEDULER_ARCHITECTURE.md  USE_CASES.md  claude_mcp_memory_fix.md  document_enhancement_proposal.md  enhanced_add_documents_implementation.md  funding.json  implementation_complete.md  locomo_benchmark_report.md  mcp_api.json  mcp_client_config.md  mcp_git_base_document_feature.md  mcp_oauth_implementation_plan.md  memory-architecture-v2.md  nine_chapter_human_simulation.md  nine_chapter_improvement_suggestion.md  oauth_setup_guide.md  phase1-implementation-summary.md  practical_implementation_plan.md  repository_based_ai_vision.md  test_cleanup_vs_production.md  vllm-glm4voice-setup.md
examples/: git_aware_documents_demo.py
experimental/: README.md
mcp_ts_client/: package.json
results/: locomo_abcd_bc_d1.jsonl  locomo_ben_abcd_only_d1_qwen35.jsonl  locomo_ben_facts_only_d1.jsonl  locomo_ben_facts_plus_abcd_d1_qwen35.jsonl  locomo_ben_facts_plus_abcd_smoke_qwen36.jsonl  locomo_smoke_f1.jsonl  locomo_smoke_judge.jsonl  locomo_smoke_rerank_judge.jsonl
scripts/: Dockerfile  README.md  agent-shell  agentic_cli.py  bench_vllm_latency.py  benchmark_orchestrator.py  check_memory_dream_ownership.py  check_version_consistency.py  cleanup_mcp.sh  compare_model_tool_mapping.py  config_doctor.py  configure_env.py  convert_to_gguf.py  correlate_request_trace.sh  doctor.py  doctor_context_probe.py  doctor_cubesandbox.py  gen_speech_test.py  gen_test_voice.py  install.bat  install.sh  install_amd.sh  install_claude_mcp.sh  install_claude_mcp_fresh.sh  install_mojo.py  install_service.sh  install_service_macos.sh  manage_models.py  mcp_stdio_entrypoint.py  merge_cloudflared_config.py  mojoassistant.service  plugin_sdk.py  preflight.py  repro_lmstudio_duplicate_tool_calls.py  reset-mcp-tool-port.sh  resource_config.py  run_baseline_bench.py  run_cli.sh  run_dev.sh  run_dev_watch.sh  (+11 more)
tests/: __init__.py  conftest.py  test_enhanced_documents_simple.py  test_final_verification.py
tools/: brain_detector.py
utils/: Conversation.py  Gorilla-Local.py  Gorilla-OpenFunction.py  ListSubjectDetail.py  PlanExecutorAgent.py
(+534 files in other folders)
